--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,12 @@ body {
   }
 }
 
+.section-title {
+  font-size: 30px;
+  font-size: 1.875rem;
+  text-align: center;
+}
+
 .TopVisual {
   position: relative;
   background: #F7F7F7;
@@ -228,54 +234,48 @@ body {
 .scroll a {
   font-size: 16px;
   font-size: 1rem;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  animation: fadeInText 4s ease-in 0s 1 normal;
+  -webkit-animation: fadeInText 4s ease-in 0s 1 normal;
   color: #333333;
   position: absolute;
   bottom: 15%;
   left: 50%;
-  transform: translate(-50%);
-  -webkit-transform: translate(-50%);
-  -moz-transform: translate(-50%);
-  -ms-transform: translate(-50%);
-  -o-transform: translate(-50%);
   z-index: 2;
 }
 
+@keyframes fadeInText {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .scroll span {
-  position: absolute;
-  bottom: 5%;
-  left: 50%;
   transform: translate(-50%);
   -webkit-transform: translate(-50%);
   -moz-transform: translate(-50%);
   -ms-transform: translate(-50%);
   -o-transform: translate(-50%);
-  width: 50px;
-  height: 50px;
-  border: 1px solid #505050;
   border-radius: 100%;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   -ms-border-radius: 100%;
   -o-border-radius: 100%;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #505050;
   animation: wave 3s infinite;
   -webkit-animation: wave 3s infinite;
-}
-
-.scroll span::after {
-  content: '';
-  position: absolute;
-  top: 15px;
-  left: 50%;
-  transform: translate(-50%);
-  -webkit-transform: translate(-50%);
-  -moz-transform: translate(-50%);
-  -ms-transform: translate(-50%);
-  -o-transform: translate(-50%);
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 26px 15px 0 15px;
-  border-color: rgba(80, 80, 80, 0.5) transparent transparent transparent;
 }
 
 @keyframes wave {
@@ -283,7 +283,7 @@ body {
     opacity: 0.2;
   }
   30% {
-    opacity: 1;
+    opacity: 0.8;
   }
   90% {
     opacity: 0;
@@ -294,14 +294,29 @@ body {
   }
 }
 
+.scroll span::after {
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 26px 15px 0 15px;
+  border-color: rgba(80, 80, 80, 0.5) transparent transparent transparent;
+}
+
 .Header {
   position: relative;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background: #969595;
-  color: #EAEAEA;
-  width: 100vw;
+  background: #333333;
   opacity: .8;
   box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
@@ -380,15 +395,9 @@ body {
 
 .About__block {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 30px 20px;
-}
-
-.About__block h2 {
-  font-size: 30px;
-  font-size: 1.875rem;
-  text-align: center;
 }
 
 .About-flex {
@@ -396,6 +405,7 @@ body {
   margin-top: 30px;
   font-size: 16px;
   font-size: 1rem;
+  filter: grayscale(80%);
 }
 
 @media (max-width: 768px) {
@@ -403,7 +413,7 @@ body {
     flex-direction: column;
   }
   .About-flex__photo {
-    max-width: 250px;
+    max-width: 200px;
     margin: 0 auto;
   }
   .About-flex__photo img {
@@ -419,7 +429,23 @@ body {
     margin-top: 30px;
   }
   .About-flex__text--name {
-    margin-bottom: 10px;
+    text-align: center;
+    margin: 20px 0;
+    position: relative;
+  }
+  .About-flex__text--name::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    bottom: -10px;
+    left: 50%;
+    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    height: 1px;
+    background: #333;
   }
 }
 
@@ -446,7 +472,23 @@ body {
     line-height: 1.5;
   }
   .About-flex__text--name {
+    text-align: center;
     margin-bottom: 30px;
+    position: relative;
+  }
+  .About-flex__text--name::after {
+    position: absolute;
+    content: '';
+    width: 70%;
+    bottom: -10px;
+    left: 50%;
+    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    height: 1px;
+    background: #333;
   }
 }
 
@@ -473,7 +515,23 @@ body {
     line-height: 1.5;
   }
   .About-flex__text--name {
+    text-align: center;
     margin-bottom: 30px;
+    position: relative;
+  }
+  .About-flex__text--name::after {
+    position: absolute;
+    content: '';
+    width: 70%;
+    bottom: -10px;
+    left: 50%;
+    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    height: 1px;
+    background: #333;
   }
 }
 
@@ -485,19 +543,21 @@ body {
 }
 
 .main-visual {
-  width: 100%;
-  height: 70vh;
   position: relative;
+  width: 100vw;
+  height: 100vw;
 }
 
 .slideshow__img--1 {
   background-attachment: fixed;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   filter: grayscale(80%);
   -webkit-filter: grayscale(80%);
   background-image: url(../img/hakata.jpeg);
@@ -511,12 +571,14 @@ body {
 
 .slideshow__img--2 {
   background-attachment: fixed;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   filter: grayscale(80%);
   -webkit-filter: grayscale(80%);
   background-image: url(../img/momochi.jpeg);
@@ -530,12 +592,14 @@ body {
 
 .slideshow__img--3 {
   background-attachment: fixed;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   filter: grayscale(80%);
   -webkit-filter: grayscale(80%);
   background-image: url(../img/canal.jpeg);
@@ -549,12 +613,14 @@ body {
 
 .slideshow__img--4 {
   background-attachment: fixed;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   filter: grayscale(80%);
   -webkit-filter: grayscale(80%);
   background-image: url(../img/nightvew.jpeg);
@@ -566,33 +632,47 @@ body {
   }
 }
 
-.Skill {
-  background: #969595;
+.Service {
+  background: #c0bebe;
   color: #EAEAEA;
   width: 100vw;
-  height: 3000px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+  padding: 30px;
+  height: 1000px;
 }
 
 .Work {
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .Price {
-  background: #969595;
+  background: #c0bebe;
   color: #EAEAEA;
   width: 100vw;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .Contact {
   background: #F7F7F7;
   color: #333333;
   width: 100vw;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .Footer {
-  background: #969595;
+  background: #c0bebe;
   color: #EAEAEA;
   width: 100vw;
 }
