--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,3 @@
-//・・・・・・・ 全体共通設定・・・・・・・
 body {
   font-family: 'Rajdhani', sans-serif;
   font-size: 62.5%;
@@ -7,10 +6,10 @@ body {
 //・・・・・・・ 幅設定・・・・・・・
 @mixin width {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
-
 }
+
 //・・・・・・・ 背景色設定・・・・・・・
 @mixin white ($background: #F7F7F7 , $color: #333333, $width: 100vw){
   background: $background;
@@ -18,7 +17,7 @@ body {
   width: $width;
 }
 
-@mixin black ($background: #969595 , $color: #EAEAEA, $width: 100vw){
+@mixin black ($background: #c0bebe , $color: #EAEAEA, $width: 100vw){
   background: $background;
   color: $color;
   width: $width;
@@ -177,18 +176,30 @@ $tab: 768px; // タブレット
 //・・・・・・・ アバウト背景設定・・・・・・・
 @mixin Backgroundimg {
   background-attachment: fixed;
+  -webkit-backface-visibility:hidden; 
+  -webkit-transform: translate3d(0,0,0); 
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   filter: grayscale(80%);
   -webkit-filter: grayscale(80%);
 }
 
 // ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ここまでmixin設定＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
+
+// ・・・・・・・・・セクション共通・・・・・・・・・
+@mixin Section-title {
+  @include fontsize(30);
+  text-align: center;
+}
+
+.section-title {
+  @include Section-title;
+}
 
 // ・・・・・・・・・top-visual・・・・・・・・・
 .TopVisual {
@@ -209,18 +220,32 @@ $tab: 768px; // タブレット
   }
 }
 
-// テキストフェードイン
-.effect-fade__text {
+@mixin effect-fade {
   animation: fadeInText 4s ease-in 0s 1 normal;
   -webkit-animation: fadeInText 4s ease-in 0s 1 normal;
-}
-@keyframes fadeInText {
-  0% {
-    opacity: 0
+  @keyframes fadeInText {
+    0% {
+      opacity: 0
+    }
+    100% {
+      opacity: 1
+    }
   }
-  100% {
-    opacity: 1
-  }
+} 
+
+// テキストフェードイン
+.effect-fade__text {
+  @include effect-fade();
+//   animation: fadeInText 4s ease-in 0s 1 normal;
+//   -webkit-animation: fadeInText 4s ease-in 0s 1 normal;
+// }
+// @keyframes fadeInText {
+//   0% {
+//     opacity: 0
+//   }
+//   100% {
+//     opacity: 1
+//   }
 }
 
 // 背景フェードイン
@@ -290,46 +315,43 @@ $tab: 768px; // タブレット
 .scroll {
   a {
   @include fontsize;
+  @include centertransform;
+  @include effect-fade;
   color: #333333;
   position: absolute;
   bottom: 15%;
   left: 50%;
-  @include centertransform;
   z-index: 2;
+//   animation: fadeInText 4s ease-in 0s 1 normal;
+//   -webkit-animation: fadeInText 4s ease-in 0s 1 normal;
+
+// @keyframes fadeInText {
+//   0% {
+//     opacity: 0
+//   }
+//   100% {
+//     opacity: 1
+//   }
+// }
 }
 
 span {
+  @include centertransform;
+  @include circle;
   position: absolute;
   bottom: 5%;
   left: 50%;
-  @include centertransform;
   width: 50px;
   height: 50px;
   border: 1px solid rgb(80, 80, 80);
-  @include circle;
   animation: wave 3s infinite;
   -webkit-animation: wave 3s infinite;
-}
-
-span::after {
-  content: '';
-  // 中央寄せ高さ：円の高さ50px/2=25px 三角形の中心高さ10px 25-10=15px
-  position: absolute;
-  top: 15px;
-  left: 50%;
-  @include centertransform;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 26px 15px 0 15px;
-  border-color: rgba(80, 80, 80, .5) transparent transparent transparent;
-}
-@keyframes wave {
+  @keyframes wave {
     0% {
       opacity: 0.2;
     }
     30% {
-      opacity: 1;
+      opacity: 0.8;
     }
     90% {
       opacity: 0;
@@ -341,6 +363,21 @@ span::after {
   }
 }
 
+span::after {
+  @include centertransform;
+  content: '';
+  position: absolute;
+  //中央寄せ高さ：円の高さ50px/2=25px三角形の中心高さ10px25-10=15pxposition: absolute;
+  top: 15px;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 26px 15px 0 15px;
+  border-color: rgba(80, 80, 80, .5) transparent transparent transparent;
+}
+}
+
 
 // ・・・・・・・・・header・・・・・・・・・
 .Header {
@@ -348,7 +385,7 @@ span::after {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  @include black;
+  background: #333333;
   opacity: .8;
   box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
@@ -392,22 +429,17 @@ span::after {
 .About__block {
   @include width;
   padding: 30px 20px;
-  h2 {
-    @include fontsize(30);
-    text-align: center;
-  }
 }
-
 
 .About-flex {
   display: flex;
   margin-top: 30px;
   @include fontsize(16);
-
+  filter: grayscale(80%);
   @include sp {
     flex-direction: column;
     &__photo {
-    max-width: 250px;
+    max-width: 200px;
     margin: 0 auto;
       img {
       max-width: 100%;
@@ -419,7 +451,20 @@ span::after {
       margin-top: 30px;
     }
     &__text--name {
-      margin-bottom: 10px;
+      text-align: center;
+      // max-width: 500px;
+      margin: 20px 0;
+      position: relative;
+    }
+    &__text--name::after {
+      position: absolute;
+      content: '';
+      width: 100%;
+      bottom: -10px;
+      left: 50%;
+      @include centertransform;
+      height: 1px;
+      background: #333;
     }
   }
 
@@ -440,28 +485,52 @@ span::after {
       line-height: 1.5;
     }
     &__text--name {
+      text-align: center;
       margin-bottom: 30px;
+      position: relative;
     }
-  }
+    &__text--name::after {
+      position: absolute;
+      content: '';
+      width: 70%;
+      bottom: -10px;
+      left: 50%;
+      @include centertransform;
+      height: 1px;
+      background: #333;
+    }
+  } 
 
   @include pc {
-    justify-content: space-around;
-    align-items: center;
-    &__photo {
-      width: 30%;
-      img {
-      width: 100%;
-      height: auto;
-      @include circle;
-      }
+  justify-content: space-around;
+  align-items: center;
+  &__photo {
+    width: 30%;
+    img {
+    width: 100%;
+    height: auto;
+    @include circle;
     }
-    &__text {
-      width: 50%;
-      margin-top: 30px;
-      line-height: 1.5;
+  }
+  &__text {
+    width: 50%;
+    margin-top: 30px;
+    line-height: 1.5;
+  }
+  &__text--name {
+    text-align: center;
+    margin-bottom: 30px;
+    position: relative;
     }
-    &__text--name {
-      margin-bottom: 30px;
+  &__text--name::after {
+      position: absolute;
+      content: '';
+      width: 70%;
+      bottom: -10px;
+      left: 50%;
+      @include centertransform;
+      height: 1px;
+      background: #333;
     }
   }
 }
@@ -473,10 +542,11 @@ span::after {
 }
 
 .main-visual {
-  width: 100%;
-  height: 70vh;
   position: relative;
+  width: 100vw;
+  height: 100vw;
 }
+
 
 .slideshow__img--1 {
   @include Backgroundimg;
@@ -507,25 +577,31 @@ span::after {
   }
 }
 
-
-// ・・・・・・・・・skill・・・・・・・・・
-.Skill {
+// ・・・・・・・・・Service・・・・・・・・・
+.Service {
   @include black;
-  height: 3000px;
+  @include width;
+  position: relative;
+  padding: 30px;
+  height: 1000px;
 }
+
 
 // ・・・・・・・・・work・・・・・・・・・
 .Work {
   @include white;
+  @include width;
 }
 
 // ・・・・・・・・・price・・・・・・・・・
 .Price {
   @include black;
+  @include width;
 }
 // ・・・・・・・・・contact・・・・・・・・・
 .Contact {
   @include white;
+  @include width;
 }
 
 // ・・・・・・・・・footer・・・・・・・・・
